<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeGrid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragments.HomeFragment"
    android:paddingTop="5dp"
    android:background="@drawable/grade_background">

    <RelativeLayout
        android:id="@+id/home_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/home_button_finance"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/finance_home"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/money"
            android:visibility="invisible">
        </Button>

        <Button
            android:id="@+id/home_button_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/shopping_list_home"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/icon_shopping_cart_24"
            android:visibility="invisible">
        </Button>

        <Button
            android:id="@+id/home_button_calendar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/calendar_home"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/calendar"
            android:visibility="invisible">
        </Button>





    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>