<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.wg_root.fragments.WgJoinFragment"
    android:background="@drawable/grade_background">

    <TextView
        android:id="@+id/join_a_wg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="20dp"
        android:text="@string/join"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/join_a_wg_hint"
        android:layout_below="@id/join_a_wg"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="Enter the invitation code to a WG here:" />


    <EditText
        android:id="@+id/wg_join_invitation_code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/join_a_wg_hint"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/invitation_code"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/wg_join_button_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/step_in"
        android:textColor="#FFFFFF" />

</RelativeLayout>