<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finance_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.finance.fragments.FinanceFragment"
    android:background="@drawable/grade_background">


    <TextView
        android:id="@+id/finance_period_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_period"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finance_period_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=""
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/finance_period_title" />

    <TextView
        android:id="@+id/finance_text_balance_money_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/finance_period_value" />

    <TextView
        android:id="@+id/finance_text_balance_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finance_text_balance_money_title"
        app:layout_constraintHorizontal_bias=".5"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/finance_text_balance_money"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finance_button_show_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/show_all_periods" />

            <Button
                android:id="@+id/finance_button_statistics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/statistics" />

            <Button
                android:id="@+id/finance_button_settle_up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/settle_up" />

            <Button
                android:id="@+id/finance_button_cash_crash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/cash_crash" />

        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/finance_button_add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_expense"
        android:src="@drawable/ic_plus_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finance_recycler_view_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_item_with_expense" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>